--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: CI
 
+on: [push, pull_request]
+
 jobs:
   linting:
     runs-on: ubuntu-latest
@@ -13,4 +15,4 @@ jobs:
     - name: Install luacheck
       run: luarocks --local install luacheck
     - name: Run luacheck
-      run: luacheck --globals vim -- ./
+      run: luacheck --globals vim -- ./lua
